--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <header>
-      <h1>Bienvenidos a la Taberna de Sátanas</h1>
-      <img
+      <div class="container">
+
+        <h1>Bienvenidos a la Taberna de Sátanas</h1>
+        <img
       src="https://images.vexels.com/media/users/3/136283/isolated/lists/da87341d139f8c208dc3f5604084152c-icono-de-jugo-de-limon.png"
       width="200" height="100" alt="este es mi logo" / class="logo">
     </header>
@@ -26,15 +28,15 @@
               <img src="/TDS/images/botella2.png"width="240"height="480"alt="charlemos"
                 /></a> </div>
                 <H5 class="Charlemos">CHARLEMOS</H5>
-          </div>
+              </div>
           <div class="trago">
             <div class="trago__img"><a href="/TDS/pages/ListaDeVideos.html" >
-            <img src="https://i.pinimg.com/originals/c6/01/26/c60126bd31717d5b7cf4b6d8a70cb478.png"width="200"height="300"alt="Los videos"
-            /></a> </div><H5 class="ListaDeVideos">LISTA DE VIDEOS</H5> 
+              <img src="https://i.pinimg.com/originals/c6/01/26/c60126bd31717d5b7cf4b6d8a70cb478.png"width="200"height="300"alt="Los videos"
+              /></a> </div><H5 class="ListaDeVideos">LISTA DE VIDEOS</H5> 
           </div>
           <div class="trago">
-              <div class="trago__img">
-                <a href="/TDS/pages/Integrantes.html">
+            <div class="trago__img">
+              <a href="/TDS/pages/Integrantes.html">
                   <img
                     src="https://pngimg.com/uploads/beer/beer_PNG2333.png"
                     width="130"
@@ -43,25 +45,26 @@
                 /></a>
               </div>
               <H5 class="Integrantes">INTEGRANTES</H5>
-          </div>
+            </div>
           <div class="trago">
-          <div class="trago__img">
+            <div class="trago__img">
             <a href="https://www.twitch.tv/los_satanas" target="_blank" id="twitch">
               <img
                 src="/TDS/images/fondopioli.jpg"
                 width="240"
                 height="240"
                 alt="canalTw"
-            /></a>
-          </div>
+                /></a>
+              </div>
           <h5 class="canalTw">Ir al canal de Twitch</h5>
           </div>
-    </div>
-    <footer>
-      <p class="p__Violeta">Aca te dejamos todos los datos del Stream, asi no te lo perdes</p>
-        <br />
-        <table style="border: 4px solid rgb(160, 0, 253)">
-          <tr></tr>
+        </div>
+      </div>
+        <footer>
+          <p class="p__Violeta">Aca te dejamos todos los datos del Stream, asi no te lo perdes</p>
+          <br />
+          <table style="border: 4px solid rgb(160, 0, 253)">
+            <tr></tr>
             <td style="border-right: 4px solid rgb(160, 0, 253)"> Dias del directo</td>
             <td>Viernes,Sabados o Domingo</td>
           </tr>
@@ -74,6 +77,7 @@
             <td>De una a tres horas</td>
           </tr>
         </table>
-    </footer>
-  </body>
-</html>
+      </footer>
+    </body>
+    </html>
+    
