--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -12,12 +12,14 @@
   </head>
   <body>
     <header>
-      <h1 class="italica"> Videos Resubidos</h1>
-      <img src="https://images.vexels.com/media/users/3/136283/isolated/lists/da87341d139f8c208dc3f5604084152c-icono-de-jugo-de-limon.png" width="200" height="100" alt="este es mi logo" / class="logo">
-      <div id="menu" >
-        <nav>        
-          <ul style="color: rgba(139, 9, 245, 0.952);"> 
-            <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
+      <div class="container">
+
+        <h1 class="italica"> Videos Resubidos</h1>
+        <img src="https://images.vexels.com/media/users/3/136283/isolated/lists/da87341d139f8c208dc3f5604084152c-icono-de-jugo-de-limon.png" width="200" height="100" alt="este es mi logo" / class="logo">
+        <div id="menu" >
+          <nav>        
+            <ul style="color: rgba(139, 9, 245, 0.952);"> 
+              <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
             <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
             <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
             <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
@@ -31,11 +33,12 @@
     <img src="/TDS/images/taberna.jpeg"width="100%" height="80%" alt="taberna">
     <footer>
       <a href="/TDS/index.html"
-        ><img
-          src="/TDS/images/ATRAS.png"
-          width="200"
-          height="150"
-          alt="volvamos al menu"
+      ><img
+      src="/TDS/images/ATRAS.png"
+      width="200"
+      height="150"
+      alt="volvamos al menu"
       /></a>
     </footer>
-    </body>
+  </div>
+  </body>
