--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -10,31 +10,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
     <title>Charlemos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="cuerpo">
   <header>
-    <h1>Participa y ayudanos en los proximos videos</h1>
+    <h1 class="titulo">Participa y ayudanos en los proximos videos</h1>
   </header>
     <p>Nos interesa saber tu opinion y que es lo que te interesaria ver en los proximos Streams, asi que completa esta pequeña encuesta :3</p>
     <form>
       <fieldset>
         <legend>REGISTRO</legend>
-        <div>
-          <label for="user">Usuario </label>
-          <br />
-          <input type="text" id="user" name="user" />
-        </div>
-        <br />
-        <div>
-          <label for="email">correo electronico</label>
-          <br />
-          <input type="email" id="email" name="email" />
-        </div>
-        <br />
-        <div>
-          <label for="password">contraseña</label>
-          <br />
-          <input type="password" id="password" name="password" />
+        <div class="container">
+          <div class="row">
+            <label for="user" class="col-sn-4 col-md-4 col-lg-4">Usuario </label>
+            <input type="text" id="user" name="user" />
+            <label for="email" class="col-sn-4 col-md-4 col-lg-4">correo electronico</label>
+            <input type="email" id="email" name="email" />
+            <label for="password" class="col-sn-4 col-md-4 col-lg-4">contraseña</label>
+            <input type="password" id="password" name="password" />
+          </div>
         </div>
         <br />
         <fieldset>
