--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -12,63 +12,86 @@
       rel="stylesheet"
     />
     <title>IntegrantesTDS</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <div class="container">
     <header>
       <h1>Los Satanás</h1>
     </header>
     <main>
-      <p>
-        Nosotros somos un grupito bastante normal conformado por una futura
-        veterinaria, dos intentos de contadores y una futura actriz.
-      </p>
-      <p>
-        <em
-          >Si quieres conocernos mejor poder clickear sobre LA CARTA y te
-          llevara al correspondiente perfil de instagram
-        </em>
-      </p>
-      <div class="grid">
-        <div class="Carta-derecho">
-          <a href="https://www.instagram.com/caminoli96/" target="_blank">
-            <img
+        <p>
+          Nosotros somos un grupito bastante normal conformado por una futura
+          veterinaria, dos intentos de contadores y una futura actriz.
+        </p>
+        <p>
+          <em
+            >Si quieres conocernos mejor poder clickear sobre LA CARTA y te
+            llevara al correspondiente perfil de instagram
+          </em>
+        </p>
+        <div class="grid">
+          <div class="Carta-derecho">
+            <a href="https://www.instagram.com/caminoli96/" target="_blank">
+              <img
               src="/TDS/images/LA TURCA.jpg"
               width="260"
               height="380"
               alt="LA TURCA"
-          /></a>
-        </div>
-        <div class="Carta-derecho">
-          <a href="https://www.instagram.com/camilaperetti97/" target="_blank">
-            <img
-              src="/TDS/images/LA GARGOLA.jpg"
-              width="260"
-              height="380"
-              alt="LA GARGOLA"
-          /></a>
-        </div>
-        <div class="Carta-izquierdo">
-          <a href="https://www.instagram.com/yagoricci/" target="_blank"
-            ><img
-              src="/TDS/images/EL BUITRE VIOLENTO.jpg"
-              width="260"
-              height="380"
-              alt="El BUITRE"
-          /></a>
-        </div>
-        <div class="Carta-izquierdo">
-          <a href="https://www.instagram.com/feliipeecg/" target="_blank">
-            <img
-              src="/TDS/images/EL CHIRUCITO.jpg"
-              width="260"
-              height="380"
-              alt="CHIRUCITO"
-            />
-          </a>
-        </div>
-      </div>
-    </main>
-    <footer>
+              /></a>
+            </div>
+            <div class="Carta-derecho">
+              <a href="https://www.instagram.com/camilaperetti97/" target="_blank">
+                <img
+                src="/TDS/images/LA GARGOLA.jpg"
+                width="260"
+                height="380"
+                alt="LA GARGOLA"
+                /></a>
+              </div>
+              <div class="Carta-izquierdo">
+                <a href="https://www.instagram.com/yagoricci/" target="_blank"
+                ><img
+                src="/TDS/images/EL BUITRE VIOLENTO.jpg"
+                width="260"
+                height="380"
+                alt="El BUITRE"
+                /></a>
+              </div>
+              <div class="Carta-izquierdo">
+                <a href="https://www.instagram.com/feliipeecg/" target="_blank">
+                  <img
+                  src="/TDS/images/EL CHIRUCITO.jpg"
+                  width="260"
+                  height="380"
+                  alt="CHIRUCITO"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+          </main>
+          <footer>
       <a href="/TDS/index.html"
         ><img
           src="/TDS/images/ATRAS.png"
