--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -92,13 +92,15 @@
           </div>
           </main>
           <footer>
-      <a href="/TDS/index.html"
-        ><img
-          src="/TDS/images/ATRAS.png"
-          width="200"
-          height="150"
-          alt="volvamos al menu"
-      /></a>
-    </footer>
+            <div class="container">
+              <a href="/TDS/index.html"
+                ><img
+                  src="/TDS/images/ATRAS.png"
+                  width="200"
+                  height="150"
+                  alt="volvamos al menu"
+              /></a>
+            </div>
+          </footer>
   </body>
 </html>
