--- a/pages/ListaDeVideos.html
+++ b/pages/ListaDeVideos.html
@@ -34,9 +34,7 @@
   <body>
     <header>
       <div class="container">
-
         <h1 class="italica"> Videos Resubidos</h1>
-        <img src="https://images.vexels.com/media/users/3/136283/isolated/lists/da87341d139f8c208dc3f5604084152c-icono-de-jugo-de-limon.png" width="200" height="100" alt="este es mi logo" / class="logo">
         <div id="menu" >
           <nav>        
             <ul style="color: rgba(139, 9, 245, 0.952);"> 
@@ -48,18 +46,22 @@
         </div>
       </nav>
     </header>
-    <p class="arial">
-      Si no pudiste estar en el directo, aca te dejamos los mejores momentos/ jugadas para que las puedas disfrutar
-    </p>
-    <img src="/TDS/images/taberna.jpeg"width="100%" height="80%" alt="taberna">
+    <div class="container">
+        <p class="arial">
+        Si no pudiste estar en el directo, aca te dejamos los mejores momentos/ jugadas para que las puedas disfrutar
+      </p>
+      <img src="/TDS/images/taberna.jpeg"width="100%" height="80%" alt="taberna">
+    </div>
     <footer>
-      <a href="/TDS/index.html"
-      ><img
-      src="/TDS/images/ATRAS.png"
-      width="200"
-      height="150"
-      alt="volvamos al menu"
-      /></a>
-    </footer>
-  </div>
+      <div class="container">
+        <a href="/TDS/index.html"
+        ><img
+        src="/TDS/images/ATRAS.png"
+        width="200"
+        height="150"
+        alt="volvamos al menu"
+        /></a>
+      </div>
+      </footer>
+  
   </body>
