--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -37,13 +37,17 @@
   </head>
   <body class="cuerpo">
     <header>
-      <h1 class="titulo">Participa y ayudanos en los proximos videos</h1>
+      <div class="container">
+        <h1 class="titulo">Participa y ayudanos en los proximos videos</h1>
+      </div>
     </header>
-    <p>
-      Nos interesa saber tu opinion y que es lo que te interesaria ver en los
-      proximos Streams, asi que completa esta pequeña encuesta :3
-    </p>
-    <form>
+    <div class="container">
+      <p>
+        Nos interesa saber tu opinion y que es lo que te interesaria ver en los
+        proximos Streams, asi que completa esta pequeña encuesta :3
+      </p>
+    </div>
+    <form class="container">
       <div class="container">
         <legend>REGISTRO</legend>
         <div class="row">
@@ -114,17 +118,21 @@
         <br />
       </div>
       <br />
-      <div>Acepto enviar este formulario</div>
+      <div class="container">Acepto enviar este formulario</div>
       <input type="checkbox" name="acepto" value="1" />
       <input type="submit" value="Send" />
     </form>
     <br />
-    <a href="/TDS/index.html"
-      ><img
-        src="/TDS/images/ATRAS.png"
-        width="200"
-        height="100"
-        alt="volvamos al menu"
-    /></a>
+    <footer>
+      <div class="container">
+        <a href="/TDS/index.html"
+          ><img
+            src="/TDS/images/ATRAS.png"
+            width="200"
+            height="150"
+            alt="volvamos al menu"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
