--- a/pages/Videos resubidos/pyke.html
+++ b/pages/Videos resubidos/pyke.html
@@ -33,37 +33,44 @@
   </head>
   <body>
     <header>
-      <h1 class="italica"> Videos Resubidos</h1>
-      <img src="https://images.vexels.com/media/users/3/136283/isolated/lists/da87341d139f8c208dc3f5604084152c-icono-de-jugo-de-limon.png" width="200" height="100" alt="este es mi logo" / class="logo">
-      <div id="menu" >
-        <nav>        
-          <ul style="color: rgba(139, 9, 245, 0.952);"> 
-            <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
-            <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
-            <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
-            <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
-          </ul>
-        </div>
-      </nav>
+      <div class="container">
+
+        <h1 class="italica"> Videos Resubidos</h1>
+        <div id="menu" >
+          <nav>        
+            <ul style="color: rgba(139, 9, 245, 0.952);"> 
+              <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
+              <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
+              <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
+              <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
-    <p class="arial">
-      Bendito sea jugar con amigos, ya que te facilitan logar esta joyita de jugada
-    </p>
-    <video
+    <div class="container">
+
+      <p class="arial">
+        Bendito sea jugar con amigos, ya que te facilitan logar esta joyita de jugada
+      </p>
+      <video
       poster="https://cdna.artstation.com/p/assets/images/images/017/195/370/large/hb-wang-pykee.jpg?1554997419"
       controls
       src="/TDS/videos/PentaPyke.mp4"
-      width="80%"
-      height="80%"
-    ></video>
+      width="100%"
+      height="100%"
+      ></video>
+    </div>
     <footer>
-      <a href="/TDS/index.html"
+      <div class="container">
+        <a href="/TDS/index.html"
         ><img
-          src="/TDS/images/ATRAS.png"
-          width="200"
-          height="150"
-          alt="volvamos al menu"
-      /></a>
-    </footer>
+        src="/TDS/images/ATRAS.png"
+        width="200"
+        height="150"
+        alt="volvamos al menu"
+        /></a>
+      </div>
+      </footer>
   </body>
 </html>
