--- a/pages/charlemos.html
+++ b/pages/charlemos.html
@@ -50,22 +50,22 @@
       <div class="container">
         <legend>REGISTRO</legend>
         <div class="row">
-          <label for="user" class="col-sn-6 col-md-6 col-lg-6">Usuario </label>
+          <label for="user" class="col-sn-4 col-md-4 col-lg-6">Usuario</label>
           <input
             type="text"
-            class="col-sn-6 col-md-6 col-lg-6"
+            class="col-sn-4 col-md-6 col-lg-6"
             id="user"
             name="user"
           />
           <label for="email" class="col-sn-4 col-md-4 col-lg-6"
-            >correo electronico</label
+            >Correo electronico</label
           >
-          <input type="email" class="col-sn-6 col-md-6 col-lg-6 id="email"
+          <input type="email" class="col-sn-4 col-md-6 col-lg-6 id="email"
           name="email" />
           <label for="password" class="col-sn-4 col-md-4 col-lg-6"
-            >contraseña</label
+            >Contraseña</label
           >
-          <input type="password" class="col-sn-6 col-md-6 col-lg-6 id="password"
+          <input type="password" class="col-sn-4 col-md-6 col-lg-6 id="password"
           name="password" />
         </div>
       </div>
@@ -74,10 +74,10 @@
       <div class="container">
         <fieldset>
           <legend>GENERO</legend>
-          <label for="femenino">femenino</label>
+          <label for="femenino">Femenino</label>
           <input type="radio" id="femenino" name="genero" value="fem" />
           <br />
-          <label for="masculino">masculino</label>
+          <label for="masculino">Masculino</label>
           <input type="radio" id="masculino" name="genero" value="masc" />
           <br />
           <label for="otro">Otro</label>
@@ -167,8 +167,8 @@
               >
                 Cerrar
               </button>
-              <button type="button" class="btn btn-primary">
-                <input type="submit" value="Send" />
+              <button type="submit" value="Send" class="btn btn-primary">
+                Enviar
               </button>
             </div>
           </div>
