--- a/pages/Videos resubidos/pyke.html
+++ b/pages/Videos resubidos/pyke.html
@@ -30,26 +30,74 @@
       integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
       crossorigin="anonymous"
     ></script>
-  </head>
+    </head>
   <body>
     <header>
       <div class="container">
-
         <h1 class="italica"> Videos Resubidos</h1>
-        <div id="menu" >
-          <nav>        
-            <ul style="color: rgba(139, 9, 245, 0.952);"> 
+        <div id="menu" class="menu">
+          <nav class="d-none d-md-block  justify-content-between">        
+            <ul> 
               <li><a href="/TDS/pages/Videos resubidos/shyvana.html">SHYVANA</a> </li>
-              <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
-              <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
-              <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
-            </ul>
-          </div>
-        </nav>
+            <li><a href="/TDS/pages/Videos resubidos/pyke.html">PYKE</a></li>
+            <li><a href="/TDS/pages/Videos resubidos/zed.html">ZED</a></li>
+            <li><a href="/TDS/pages/Videos resubidos/problemasT.html">PROBLEMAS T</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="dropdown d-md-none">
+        <button
+  type="button"
+  class="btn btn-primary"
+  data-bs-toggle="modal"
+  data-bs-target="#staticBackdrop"
+>
+  Videos Resubidos
+</button>
+<div
+  class="modal fade"
+  id="staticBackdrop"
+  data-bs-backdrop="static"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="staticBackdropLabel">Videos Resubidos</h3>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
       </div>
+      <div class="modal-body">
+        <div class="container">
+          <ul>
+            <li>
+              <a href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
+            </li>
+            <li><a href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
+            <li><a href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
+            <li>
+              <a href="/TDS/pages/Videos resubidos/problemasT.html"
+                >Problemas Tecnicos</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+      </div> 
+    </div>
+      <br>
     </header>
     <div class="container">
-
       <p class="arial">
         Bendito sea jugar con amigos, ya que te facilitan logar esta joyita de jugada
       </p>
