--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
       <div class="grid">
         <div class="trago">
           <div class="trago__img"><a href="/TDS/pages/charlemos.html" >
-            <img src="/TDS/images/botella2.png"width="240"height="480"alt="charlemos"
+            <img src="/TDS/images/botella 1.png"width="100"height="300"alt="charlemos"
             /></a> </div>
             <H5 class="Charlemos">CHARLEMOS</H5>
           </div>
           <div class="trago">
             <div class="trago__img"><a href="/TDS/pages/ListaDeVideos.html" >
-              <img src="https://i.pinimg.com/originals/c6/01/26/c60126bd31717d5b7cf4b6d8a70cb478.png"width="200"height="300"alt="Los videos"
+              <img src="https://pngimg.com/uploads/beer/beer_PNG2333.png"width="85"height="190"alt="Los videos"
               /></a> </div><H5 class="ListaDeVideos">LISTA DE VIDEOS</H5> 
             </div>
             <div class="trago">
               <div class="trago__img">
                 <a href="/TDS/pages/Integrantes.html">
                   <img
-                  src="https://pngimg.com/uploads/beer/beer_PNG2333.png"
-                  width="130"
-                  height="180"
+                  src="./images/fernet.png"
+                  width="85"
+                  height="190"
                   alt="Integrantes"
                   /></a>
                 </div>
