--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
           </div>
           <div class="trago">
             <div class="trago__img"><a href="/TDS/pages/ListaDeVideos.html" >
-              <img src="https://pngimg.com/uploads/beer/beer_PNG2333.png"width="85"height="190"alt="Los videos"
-              /></a> </div><H5 class="ListaDeVideos">LISTA DE VIDEOS</H5> 
+              <img src="./images/copa.png" width="85"height="190"alt="Los videos"
+              /></a> </div>
+              <H5 class="ListaDeVideos">VIDEOS</H5> 
             </div>
             <div class="trago">
               <div class="trago__img">
@@ -72,8 +73,8 @@
                   <a href="https://www.twitch.tv/los_satanas" target="_blank" id="twitch">
                     <img
                     src="/TDS/images/fondopioli.jpg"
-                    width="240"
-                    height="240"
+                    width="200"
+                    height="200"
                     alt="canalTw"
                     /></a>
                   </div>
