--- a/index.html
+++ b/index.html
@@ -41,20 +41,76 @@
         actuales y no tan actuales (mientra sean picantes)
       </p>
       <h2>PASEN Y PIDANLE AL CANTINERO LO QUE QUIERAN</h2>
+      <br>
+      <p>Pidiendole una botella de cerveza, seras invitado charlar con nosotros así podremos tomar en cuenta tu opinion en futuros strems</p>
+      <p>Tomando el daiquiri podras ver los videos resubidos de twitch</p>
+      <p>Escogiendo el fernet vas poder conocer a Los Satanás</p>
+      <p>Y clickando en nuestro icono de TW podras ir a nuestro canal rapidamente</p>
     </div>
     <div class="container">
+    <div class="dropdown d-lx-none">
+      <button
+    type="button"
+    class="btn btn-primary"
+    data-bs-toggle="modal"
+    data-bs-target="#staticBackdrop"
+    >
+    Videos Resubidos
+    </button>
+    <div
+    class="modal fade"
+    id="staticBackdrop"
+    data-bs-backdrop="static"
+    data-bs-keyboard="false"
+    tabindex="-1"
+    aria-labelledby="staticBackdropLabel"
+    aria-hidden="true"
+    >
+    <div class="modal-dialog">
+    <div class="modal-content">
+    <div class="modal-header">
+      <h3 class="modal-title" id="staticBackdropLabel">Videos Resubidos</h3>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div class="modal-body">
+      <div class="container">
+        <ul>
+          <li>
+            <a href="/TDS/pages/Videos resubidos/shyvana.html">Shyvana 3vs5</a>
+          </li>
+          <li><a href="/TDS/pages/Videos resubidos/pyke.html">Pyke R casi perfectas</a></li>
+          <li><a href="/TDS/pages/Videos resubidos/zed.html">Zed el mejor ninja</a></li>
+          <li>
+            <a href="/TDS/pages/Videos resubidos/problemasT.html"
+              >Problemas Tecnicos</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div> 
+    </div>
+
+    <div class="container d-none d-md-block" >
       <div class="grid">
         <div class="trago">
           <div class="trago__img"><a href="/TDS/pages/charlemos.html" >
             <img src="/TDS/images/botella 1.png"width="100"height="300"alt="charlemos"
             /></a> </div>
-            <H5 class="Charlemos">CHARLEMOS</H5>
           </div>
           <div class="trago">
             <div class="trago__img"><a href="/TDS/pages/ListaDeVideos.html" >
               <img src="./images/copa.png" width="85"height="190"alt="Los videos"
               /></a> </div>
-              <H5 class="ListaDeVideos">VIDEOS</H5> 
+              
             </div>
             <div class="trago">
               <div class="trago__img">
@@ -66,7 +122,7 @@
                   alt="Integrantes"
                   /></a>
                 </div>
-                <H5 class="Integrantes">INTEGRANTES</H5>
+                
               </div>
               <div class="trago">
                 <div class="trago__img">
@@ -78,10 +134,8 @@
                     alt="canalTw"
                     /></a>
                   </div>
-                  <h5 class="canalTw">Ir al canal de Twitch</h5>
                 </div>
-              </div>         
-            </div>
+              </div>                 
       <div class="container">
         <p class="p__Violeta">Aca te dejamos todos los datos del Stream, asi no te lo perdes</p>
         <br />
